[gd_scene load_steps=3 format=3 uid="uid://bffpm7mu2kwt5"]

[ext_resource type="Script" path="res://snake_body.gd" id="1_a6lrl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_nb8ud"]

[node name="SnakeBody" type="RigidBody3D"]
collision_layer = 4
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_a6lrl")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("BoxShape3D_nb8ud")

[node name="collisionShapeTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[node name="dieTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="collisionShapeTimer" to="." method="_on_collision_shape_timer_timeout"]
[connection signal="timeout" from="dieTimer" to="." method="_on_die_timer_timeout"]
